hard-gists/66f1569ebb0d878748fe/run.log
=== Docker Run Log for 66f1569ebb0d878748fe ===
Started at: Mi 29. Okt 16:42:11 CET 2025

[2025-10-29 16:42:11] START: Running container for 66f1569ebb0d878748fe
[2025-10-29 16:42:11] SUCCESS: Container 8446708b2a745bcb8b7afd4dd18cbca711e047f6b27d99e6c91ac180a3a66b8d started for 66f1569ebb0d878748fe
=== Container logs for 66f1569ebb0d878748fe ===
  File "/snippet.py", line 31
    print "PROC", stats.processed
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 66f1569ebb0d878748fe ===
[2025-10-29 16:42:13] INFO: Container 8446708b2a745bcb8b7afd4dd18cbca711e047f6b27d99e6c91ac180a3a66b8d has stopped
